--- a/CSS-Position/style.css
+++ b/CSS-Position/style.css
@@ -1,9 +1,21 @@
-.box{
-    width: 200px;
-    height: 200px;
+body{
+    margin: 0;
+    padding: 0;
+}
+.parent{
+    width: 500px;
+    height: 250px;
+    background: green;
+    position:relative
+}
+.child{
+    width: 150px;
+    height:150px;
     background: red;
+    border-radius: 50%;
 
     position: absolute;
-    bottom: 0;
-    left: 0;
+    top: 0;
+    right: 0;
+
 }
